@@ -1,3 +1,8 @@
+2008-08-17  Valentin Hilbig  <tino@zoo.03.softkill.net>
+
+	* getopt.h (tino_getopt_var_set_arg_imp, tino_getopt_arg):
+	TINO_GETOPT_COUNT added
+
 2008-05-30  Valentin Hilbig  <tino@firebird.03.softkill.net>
 
 	* keypressed.h: added
